2002-09-29    <jsh@unfactored.org>

	* sawfish/wm/state/configure.jl (configure-request-handler): fixed
	bug of not checking for locked dimensions before overwriting the
	dims variable. This fixes #88788

	* sawfish/wm/state/wm-spec.jl (_NET_WM_STATE_FULLSCREEN): fixed
	stupid bug I recently introduced stopping windows putting
	themselves into fullscreen mode

2002-09-28  John Harper  <jsh@unfactored.org>

	Work to fix #83431:

	* sawfish/wm/state/configure.jl (configure-request-handler):
	handle nil x or y components of `position' request.

	* sawfish/wm/windows.jl (adjust-position-for-gravity/x,
	adjust-position-for-gravity/y): new functions, factored out of
	adjust-position-for-gravity, which is now defined in terms of
	these two

2002-09-26  John Harper  <jsh@unfactored.org>

	* sawfish/wm/commands/grow-pack.jl (bump-distance): patch from
	Daniel Pfeiffer <occitan@esperanto.org> to fix bug "when two
	windows have the same size in the direction perpendicular to
	the pack"

2002-09-25  John Harper  <jsh@unfactored.org>

	* sawfish/wm/ext/match-window.jl (match-window): don't modify
	the list returned by get-x-property, copy it first

2002-09-23  John Harper  <jsh@unfactored.org>

	Work to fix #81616 (fullscreen windows lose their original
	frame type when loaded from saved session):

	* sawfish/wm/state/maximize.jl: more work on session
	management. Fullscreen windows shouldn't lose their unmaximized
	'type property anymore

	* sawfish/wm/frames.jl (push-window-type, pop-window-type):
	mechanism for setting a temporary window type (that doesn't get
	saved in the session file)

	* sawfish/wm/session/load.jl, sawfish/wm/session/init.jl
	(sm-add-restored-properties, sm-restored-properties):
	properties to restored but not save (i.e. assumes they're saved
	by hand using the sm-window-save-functions hook)

2002-09-22  John Harper  <jsh@unfactored.org>

	* sawfish/wm/state/wm-spec.jl (wm-spec-maximize-handler): don't