@@ -1,3 +1,9 @@
+2002-10-03  John Harper  <jsh@unfactored.org>
+
+	* sawfish/wm/misc.jl (get-x-text-property,
+	set-x-text-property): these functions now written in lisp so
+	that they use the property cache
+
 2002-09-29    <jsh@unfactored.org>
 
 	* sawfish/wm/state/configure.jl (configure-request-handler): fixed
